# RuRay

./: .gitignore  LICENSE  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
.trae/rules/: project_rules.md
assets/css/: main.css
changelog/: v1.0.10.md  v1.0.13.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.md
components/: AdvancedLogViewer.vue  AppHeader.vue  LoadingScreen.vue  LogSettings.vue  LogViewer.vue  MinimalMode.vue  ServerList.vue  StatusBar.vue  TunConfig.vue  Zen.vue
i18n/locales/: en.json  ja.json  zh.json
pages/: advanced-log.vue  index.vue
ruray/: README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
ruray/components/: AppHeader.vue  LogViewer.vue  ServerList.vue  StatusBar.vue  Zen.vue
ruray/src-tauri/: Cargo.toml  tauri.conf.json
ruray/src-tauri/capabilities/: default.json
ruray/src-tauri/src/: commands.rs  config.rs  lib.rs  logger.rs  main.rs  proxy.rs  system.rs  tun.rs  xray.rs
src-tauri/: Cargo.toml  default.pac  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  logger.rs  network.rs  proxy.rs  system.rs  tun.rs  tun2proxy_ffi.rs  xray.rs
src-tauri/tun2proxy/: README.md
utils/: errors.js
