[package]
name = "ruray"
version = "0.1.0"
description = "RuRay - Xray Core Desktop Client"
authors = ["Lander"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ruray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
winreg = "0.52"
rand = "0.8"
zip = "0.6"
url = "2.4"
windows-sys = { version = "0.60", features = ["Win32_Security", "Win32_System_Threading", "Win32_Foundation"] }
base64ct = "=1.7.1"
libloading = "0.8"
sysinfo = "0.30"
# TUN 网卡相关依赖
tun = "0.6"
network-interface = "1.1"
ipnet = "2.9"
packet = "0.1"
wintun = "0.4"

